<resources>
    <string name="app_name">CareForYou</string>
    <string name="title_activity_nav_bar">NavBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>
    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>
    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>
    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>
    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>
    <string name="editor_insert_reminder_successful">Reminder saved</string>
    <string name="editor_insert_reminder_failed">Error with saving reminder</string>
    <string name="editor_update_reminder_successful">Reminder updated</string>
    <string name="editor_update_reminder_failed">Error with updating reminder</string>
    <string name="reminder_title">AlarmReminder</string>
    <string name="title_activity_maps">Map</string>
    <string name="tip1">The most important part is to cut back on sugars and starches, or carbohydrates.
        When you do that, your hunger levels go down, and you generally end up eating significantly fewer calories.
        Instead of burning carbs for energy, your body now starts burning stored fat for energy.
        Another benefit of cutting carbs is that it lowers insulin levels, causing the kidneys to shed excess sodium and water. This reduces bloating and unnecessary water weight.
        According to some dietitians, it’s not uncommon to lose up to 10 pounds (4.5 kg) — sometimes more — in the first week of eating this way. This weight loss includes both body fat and water weight.
        One study in healthy women with obesity reported that a very low carb diet was more effective than a low fat diet for short-term weight loss.
        Research suggests that a low carb diet can reduce appetite, which may lead you to eat fewer calories without thinking about it or feeling hungry.
        Put simply, reducing carbs can lead to quick, easy weight loss.</string>
    <string name="tip2">Each one of your meals should include a protein source, fat source, and low carb vegetables.
        As a general rule, try eating two to three meals per day. If you find yourself hungry in the afternoon, add a fourth meal.
        Constructing your meals in this way should bring your carb intake down to around 20–50 grams per day.
    </string>
    <string name="ice">Pimples can be challenging to get rid of, and they’re even more tempting to pop. You already know that popping is a complete no-no. Still, you may also be turned off by conventional treatment methods that might be harsh on your skin.
        Natural skin care remedies are growing in popularity, including those used in the alternative treatment of acne. Ice is one such touted treatment. There are potential benefits to ice on pimples, but the question is whether this method is effective enough to fully clear up your breakout for good.</string>
    <string name="lemon">For acne, lemon juice is purportedly said to offer:
    reduced oil (sebum) due to the drying effects of citric acid
    antiseptic qualities, which may kill bacteria that lead to acne, such as P. acnes
    reduced redness and inflammation that may help treat inflammatory acne as well as leftover scars
    </string>
    <string name="lemonsideeffect">If youve ever taken a bite out of a lemon, you know how strong this citrus fruit tastes. Its effects on the skin can also be powerful, leading to potential side effects. These include:
    </string>
    <string name="steam1">It’s cleansing: Steam opens up your pores and helps loosen any buildup of dirt for a deeper cleanse. Opening up your pores also softens blackheads, making them easier to remove.</string>
    <string name="steam2">It promotes circulation: The combination of warm steam and an increase in perspiration dilates your blood vessels and increases circulation. This boost of blood flow nourishes your skin and delivers oxygen. The result is a natural, healthy glow.</string>
    <string name="steam3">It’s hydrating: Steam hydrates the skin by helping to increase oil production, naturally moisturizing the face.
    It helps with sinus congestion. Steam can help relieve sinus congestion and headaches that often accompany it. Adding certain essential oils to your steam can boost the effect.</string>
    <string name="steam4">It’s affordable and accessible: You don’t need to dish out big bucks for a steam facial at a spa to enjoy the benefits; it can be done at home using items you already have</string>
    <string name="honeyylemon">Mix one tablespoon of organic raw honey and half a squeezed lemon in to a bowl and apply all over your face, avoiding the eye area. Now, let your skin soak up all this goodness for 15-30 minutes (depending on how sensitive your skin is).
        Lemon is highly acidic and can cause skin irritations, dryness, and sun damage, especially if you have sensitive skin. They key to using lemon safely is to only use small amounts on your skin. Also, be sure to do a patch test on a small area of your skin before applying either lemon or honey to your face.</string>
    <string name="peppermint">It is great for bug bites and itching, as it provides a cooling sensation thatll give you welcome relief.
    </string>
    <string name="peppermint1">The quickest, easiest way is to crush up the leaves and rub the peppermint directly onto the skin. You could even freeze the crush peppermint leaves into the icecubes for a cooling double whammy, as the cold of the ice cubes also helps to numb the affected area and bring down swalling and inflammation.Always use clean, filtered water.</string>
    <string name="aloevera1">We love aloe vera for just about every kind of skin irritation. Aloe is probably best-known for its ability to heal sunburns, but its extremely versatile as it soothes the skin and relieves swelling and irritation. If you live in Sourthen California, there is a probably an 85% chance its already growing in your yard.</string>
    <string name="aloevera2">Break off a leaf from the plant, and cut it open lenghtwise from top to bottm with a knife. Scoop out the gooey gel inside, and rub it directly onto the irritated skin. If you have extra left over, you can keep it refrigerated in an airtight container for up to a week.</string>
    <string name="fruitpeels">Fruit peels work great on itchiy skin, banana rind, watermelon rind etc. are some. This is a great way to re-purpose your kitchen scraps that might otherwise be thrown out! But, this method doest have a potential drawback: the fruity scents may attract bugs, This may be  a better choice for using indoors.</string>
    <string name="scalpmassage">Massaging scalp with sesame oil twice a week will give you good results.After one hour wash your hair. You can use a mild herbal shampoo or Shikakai for washing your hair.</string>
    <string name="neemleaves">Use neem leaves watre to wash your hair after shampooing. this will kill the bacteria which cause dandruff. This remedy even clears any pimple problems that you may have.
</string>
    <string name="amla">Amla is another Remedy for dandruff. Eating and applying gooseberrys juice with almond oil will cure dandruff easily.</string>
    <string name="bakingsoda1">Mix 2 tablespoons of baking soda with water until you reach the perfect paste consistency.
For best results, part your hair in sections and apply a few drops of olive oil before spreading the paste on your scalp, and let it sit for 5–10 minutes.
Thoroughly rinse the mixture out.</string>
    <string name="bakingsoda2">Baking soda is not only amazing for baking cookies, but is also a powerful disinfectant when it comes to cleaning anything, including your scalp. Baking soda removes the excess oils produced by the scalp, washing off that extra grease that contributes to dandruff.
</string>
    <string name="applevinegar">Apple cider vinegar has powerful anti-inflammation properties that help kill the yeast and virus that can cause itchy scalp.Also, apple cider vinegar balances the pH levels of the scalp, which may help relieve itching and dryness.
Rinse your hair and scalp with water and allow ot to dry.
Mix equal amounts of apple cider vinegar and water and pour the mixture into a spray bottle. Apply this mixture directly onto your scalp with the help of cotton balls. Spray it on your scalp.
After few minutes, shampoo with normal water.
Follow this remedy once or twice a week.</string>
    <string name="hairaloe">Aloe vera gel contains moisturizing properties, which may relieve excessive dryness and itching. If fresh aloe vera gel is not available, you can purchase the gel.
Spread some fresh aloe vera gel onto your scalp using your fingers.
Allow it to sit for 10 to 15 kins and then wash your hair with a mild shampoo.</string>
    <string name="turmericcold">Roast turmeric root and grind it into a smooth powder. Mix it with water and honey, and drink it twice a day.</string>
    <string name="massage">If you are living with rheumatoid arthritis (RA), massage can improve healthy circulation throughout the arthritic joints, reducing swelling and improving quality of life. ... For osteoarthritis, massage can help decrease swelling and pain, improve joint mobility and provide tension and stress relief.
</string>
    <string name="waterdrink">Drinking water can stimulate our production of synovial fluid (in charge of lubricating the cartilage), reduce inflammation around the joint and encourage the growth of new cells in the cartilage tissues. Proper water intake can also support our circulation and immune system, enabling it to promote a faster recovery</string>
</resources>