<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="199dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/hairmassageimage" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="Massage"
                android:textStyle="bold"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/massage"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="199dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/turmericimage" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="Turmeric"
                android:textStyle="bold"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/turmericcold"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="199dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/drinkwaterimage" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="Drink More Water:"
                android:textStyle="bold"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/waterdrink"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>